--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   fl_chart: ^0.69.0
   google_fonts: ^6.2.1
   intl: ^0.19.0
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.3
 
 dev_dependencies:
   flutter_test:
