--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   google_fonts: ^6.2.1
   intl: ^0.19.0
   firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
