--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.3
   shared_preferences: ^2.2.2
+  connectivity_plus: ^6.1.4
+  share_plus: ^10.1.4
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
